--- a/web/vaseis dedomenwn/prosthiki_athliti.html
+++ b/web/vaseis dedomenwn/prosthiki_athliti.html
@@ -11,18 +11,38 @@
 <body>
 
     <div class="navbar">
-        <a href="#home">Αρχική</a>
-        <div class="dropdown">
-          <button class="dropbtn">Αθλητές 
-            <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="dropdown-content">
-            <a href="prosthiki_athliti.html">Εισαγωγή</a>
-            <a href="delete_athlete.html">Διαγραφή</a>
-            <a href="view_athletes.php">Προβολή</a>
-          </div>
-        </div> 
-      </div>
+        <a href="index.html">Αρχική</a>
+            <div class="dropdown">
+                <button class="dropbtn">Αθλητές 
+                <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="prosthiki_athliti.html">Εισαγωγή</a>
+                    <a href="delete_athlete.html">Διαγραφή</a>
+                    <a href="view_athletes.php">Προβολή</a>
+                </div>
+            </div> 
+            <div class="dropdown">
+                <button class="dropbtn">Αθλήματα 
+                <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="insert_athlima.html">Εισαγωγή</a>
+                    <a href="delete_athlima.html">Διαγραφή</a>
+                    <a href="select_athlima.php">Προβολή</a>
+                </div>
+            </div> 
+            <div class="dropdown">
+                <button class="dropbtn">Στατιστικά 
+                <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="insert_statistika.html">Εισαγωγή</a>
+                    <a href="delete_statistika.html">Διαγραφή</a>
+                    <a href="select_statistika.php">Προβολή</a>
+                </div>
+            </div> 
+    </div>
 
 
 
